# BioNetGMMFit

./: .gitattributes  .gitignore  4_protein_linear.bngl  4proV2.bngl  4proV2Xt2.00.csv  4proV2XtMoments2.00.csv  4proV2_estimates.csv  4proV2_leastCostEstimate.csv  4proV2t2.00_leastCostMoments.csv  4proXt2.00.csv  4proYt2.00.csv  4pro_estimates.csv  4pro_reducedK5.bngl  4pro_ring.bngl  6pro150p25s.csv  6pro_t10.csv  AB.bngl  CD8First.csv  CD8FirstSecond.csv  CD8Tutorial.txt  CD8XtMoments2.csv  CD8YtMoments2.csv  CD8_150p_25s.csv  CS_3pro.sh  CS_6pro.sh  CS_CD8.sh  CS_CD8v2.sh  CS_NKG2D.sh  Config.csv  Config4pro.csv  Config6pro.csv  CyGMM  Dockerfile  GBMATP.csv  Makefile  NKG2D.bngl  ODE.hpp  PSO.csv  README.md  data_parameters.csv  (+64 more)
configs/: Config6pro_1.csv  Config6pro_2.csv  Config6pro_3.csv  Config6pro_4.csv  Config6pro_5.csv  ConfigCD8_1.csv  ConfigCD8_2.csv  ConfigCD8_3.csv  ConfigCD8_4.csv  ConfigCD8_5.csv  ConfigNKG2D_1.csv  ConfigNKG2D_2.csv  ConfigNKG2D_3.csv  ConfigNKG2D_4cp.csv  ConfigNKG2D_5.csv
data/: 3linY.csv  Y_0.csv  knewY.0.txt  testX.csv  testYr.csv
doc/: README.md  graph.sh  l3p100x.txt  lin3pro.txt  out.txt  run.sh  run_4pro.sh  run_6pro.sh  ssa_6pro.sh
example/: CD56BrightiGG_t32.csv  Config.csv  covariance.csv  generate_data.py  gmm_tutorial.ipynb  graphingAll.py  histogram.py  linear.sh  load.sh
frontend/: 4proCD8.csv  4proXYt2.csv  4proXt2.00.csv  4proXtMoments2.00.csv  4pro_estimates.csv  4pro_leastCostEstimate.csv  4pro_means.txt  4pro_means_variances.txt  4prot2.00_leastCostMoments.csv  6proEst.csv  6proNoHold.csv  6proNoHoldMoreParticles.csv  app.py  elastic  harmony.log.txt  http_ca.crt  static4proV2Xt2.00.csv  static4proV2XtMoments2.00.csv  static4proV2_estimates.csv  static4proV2_leastCostEstimate.csv  static4proV2t2.00_leastCostMoments.csv  t10.csv  t2.csv  t40.csv
input/: X_0.csv  testY.csv
src/: 4proYt2.csv  CMakeCache.txt  CMakeLists.txt  CyGMM20845.txt  CyGMM21127.txt  CyGMM22233.txt  CyGMM2557657.txt  CyGMM2559336.txt  CyGMM2559548.txt  CyGMM2559614.txt  CyGMM2559615.txt  CyGMM2559616.txt  CyGMM2559626.txt  CyGMM2559627.txt  CyGMM2563511.txt  CyGMM2563519.txt  CyGMM2565818.txt  CyGMM2565819.txt  CyGMM2566302.txt  CyGMM2566303.txt  CyGMM2566304.txt  CyGMM29363.txt  CyGMM29446.txt  CyGMM29447.txt  CyGMM29448.txt  CyGMM29449.txt  CyGMM29473.txt  CyGMM29521.txt  CyGMM29725.txt  CyGMM29729.txt  CyGMM29731.txt  CyGMM29733.txt  CyGMM29765.txt  CyGMM5.txt  CyGMM6.txt  GBMAT.csv  Makefile  aDiff.csv  calc.cpp  calc.hpp  (+94 more)
src/Frontend/: app.py
src/Frontend/templates/: index.html  output.html
(+450 files in other folders)
